2016-03-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (found_in_list): Don't bother keeping the compiled
	regular expression when it matched -- drop this tiny optimization
	for when opening multiple files.  Instead stop calling malloc().
	* src/nano.h: Delete a now-unused struct member.

2016-03-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax), src/color.c (color_update): Don't
	bother discarding a duplicate syntax (it's too rare, saves little
	memory, and freeing it properly	would cost even more code), just
	select the last-defined one.  This addresses Savannah bug #47303.
	* src/color.c (color_update): Allow to select an empty syntax.

2016-02-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h, src/rcfile.c, src/color.c: Rename a struct member.
	* src/rcfile.c (parse_rcfile): Don't allocate a struct for the "none"
	syntax, and thus prevent it from being extended.
	* src/nano.h, src/rcfile.c: Arrange some things more orderly.
	* src/rcfile.c (parse_rcfile): Close an extended syntax again.
	* src/rcfile.c (parse_rcfile): Rename a variable.
	* src/rcfile.c (grab_and_store): Fix breakage of r5695.
	* src/color.c (color_update): Do not dereference symlinks, so that
	the syntax will be derived from the name given on the command line,
	not from that of the target file.  This fixes Savannah bug #47307.

2016-02-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_header_exp): Don't continue when something is
	wrong -- skip the rest of the line.  This fixes Savannah bug #47289.
	* src/rcfile.c (parse_header_exp, parse_magic_exp, grab_and_store):
	Use the now correct parsing of header regexes also for parsing magic
	regexes.  This fixes Savannah bug #47292 and saves 50 lines of code.
	* src/rcfile.c (grab_and_store): Rename a variable and densify.
	* src/rcfile.c (grab_and_store): Do not drop regexes that were
	gathered earlier.  This fixes Savannah bug #47285.