@@ -3,6 +3,7 @@
 	regular expression when it matched -- drop this tiny optimization
 	for when opening multiple files.  Instead stop calling malloc().
 	* src/nano.h: Delete a now-unused struct member.
+	* src/global.c (free_list_item): Elide this now too tiny function.
 
 2016-03-01  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c (parse_syntax), src/color.c (color_update): Don't
